--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>heartfelt-landing-journey</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Vriksha Mithra</title>
+    <meta name="description" content="Vrikshma Mitra" />
+    <meta name="author" content="HT LLC" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
